<resources>
    <string name="app_name">Vols Archive</string>
    <string name="welcome_to_mes_vols">Welcome to Vols Archive</string>
    <string name="select_airport">Select Airport</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="List_of_airports">List of airports</string>
    <string name="selected_date_range">...</string>
    <string name="date_range">calendar</string>
    <string name="btnText">SEARCH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>